samples/_failures_safe/1761497066_122b10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d08338a.c: In function ‘main’:
./samples/SAFE/__tmp_1d08338a.c:151:5: error: expected expression at end of input
  151 |     process_log_data(
      |     ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1d08338a.c:151:5: error: too few arguments to function ‘process_log_data’
./samples/SAFE/__tmp_1d08338a.c:78:6: note: declared here
   78 | void process_log_data(LogEntry* entries, int count) {
      |      ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1d08338a.c:151:5: error: expected declaration or statement at end of input
  151 |     process_log_data(
      |     ^~~~~~~~~~~~~~~~
